@@ -1,8 +1,9 @@
 pluginManagement {
     repositories {
+        mavenCentral()
         maven { url 'https://maven.aliyun.com/repository/public'}
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-        mavenCentral()
         gradlePluginPortal()
     }
 }
+rootProject.name = 'GLUtils'
