@@ -1,7 +1,7 @@
 # DSL designed by OverRun Organization
 # Soft-coded vertices meta
 # This file shows all of the valid syntax
-# Parser: org.overrun.glutils.MeshLoader
+# Parser: org.overrun.glutils.mesh.MeshLoader
 
 # this is a comment
 // this is a comment
